lib/antlr/src/parser/mysqlParser.cpp

// Generated from ./src/parser/mysql.g4 by ANTLR 4.11.1


#include "mysqlVisitor.h"

#include "mysqlParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MysqlParserStaticData final {
  MysqlParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MysqlParserStaticData(const MysqlParserStaticData&) = delete;
  MysqlParserStaticData(MysqlParserStaticData&&) = delete;
  MysqlParserStaticData& operator=(const MysqlParserStaticData&) = delete;
  MysqlParserStaticData& operator=(MysqlParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mysqlParserOnceFlag;
MysqlParserStaticData *mysqlParserStaticData = nullptr;

void mysqlParserInitialize() {
  assert(mysqlParserStaticData == nullptr);
  auto staticData = std::make_unique<MysqlParserStaticData>(
    std::vector<std::string>{
      "sql_stmt_list", "sql_stmt", "use_stmt", "select_stmt", "expr", "primary_expr", 
      "literal_value", "aggregate_func", "unary_operator", "result", "result_column", 
      "schema_name", "table_name", "column_name", "column_value", "any_name"
    },
    std::vector<std::string>{
      "", "';'", "','", "'*'", "'/'", "'%'", "'+'", "'-'", "'<<'", "'>>'", 
      "'&'", "'|'", "'<'", "'<='", "'>'", "'>='", "'='", "'=='", "'!='", 
      "'('", "')'", "'~'", "'.'", "'IN'", "'SELECT'", "'FROM'", "'WHERE'", 
      "", "", "'not'", "'USE'", "'SECURE'", "'INSECURE'", "'COUNT'", "'MAX'", 
      "'MIN'", "'SUM'", "'AVG'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "IN", "SELECT", "FROM", "WHERE", "AND", "OR", 
      "NOT", "USE", "SECURE", "INSECURE", "COUNT", "MAX", "MIN", "SUM", 
      "AVG", "IDENTIFIER", "DECIMAL_LITERAL", "STRING_LITERAL", "SINGLE_LINE_COMMENT", 
      "MULTILINE_COMMENT", "SPACES"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mysqlParserStaticData = staticData.release();
}

}

mysqlParser::mysqlParser(TokenStream *input) : mysqlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

mysqlParser::mysqlParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  mysqlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mysqlParserStaticData->atn, mysqlParserStaticData->decisionToDFA, mysqlParserStaticData->sharedContextCache, options);
}

mysqlParser::~mysqlParser() {
  delete _interpreter;
}

const atn::ATN& mysqlParser::getATN() const {
  return *mysqlParserStaticData->atn;
}

std::string mysqlParser::getGrammarFileName() const {
  return "mysql.g4";
}

const std::vector<std::string>& mysqlParser::getRuleNames() const {
  return mysqlParserStaticData->ruleNames;
}

const dfa::Vocabulary& mysqlParser::getVocabulary() const {
  return mysqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView mysqlParser::getSerializedATN() const {
  return mysqlParserStaticData->serializedATN;
}


//----------------- Sql_stmt_listContext ------------------------------------------------------------------

mysqlParser::Sql_stmt_listContext::Sql_stmt_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<mysqlParser::Sql_stmtContext *> mysqlParser::Sql_stmt_listContext::sql_stmt() {
  return getRuleContexts<mysqlParser::Sql_stmtContext>();
}

mysqlParser::Sql_stmtContext* mysqlParser::Sql_stmt_listContext::sql_stmt(size_t i) {
  return getRuleContext<mysqlParser::Sql_stmtContext>(i);
}

tree::TerminalNode* mysqlParser::Sql_stmt_listContext::EOF() {
  return getToken(mysqlParser::EOF, 0);
}


size_t mysqlParser::Sql_stmt_listContext::getRuleIndex() const {
  return mysqlParser::RuleSql_stmt_list;
}


std::any mysqlParser::Sql_stmt_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitSql_stmt_list(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Sql_stmt_listContext* mysqlParser::sql_stmt_list() {
  Sql_stmt_listContext *_localctx = _tracker.createInstance<Sql_stmt_listContext>(_ctx, getState());
  enterRule(_localctx, 0, mysqlParser::RuleSql_stmt_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(32);
    sql_stmt();
    setState(41);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(34); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(33);
          match(mysqlParser::T__0);
          setState(36); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == mysqlParser::T__0);
        setState(38);
        sql_stmt(); 
      }
      setState(43);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mysqlParser::T__0) {
      setState(44);
      match(mysqlParser::T__0);
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(mysqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmtContext ------------------------------------------------------------------

mysqlParser::Sql_stmtContext::Sql_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mysqlParser::Select_stmtContext* mysqlParser::Sql_stmtContext::select_stmt() {
  return getRuleContext<mysqlParser::Select_stmtContext>(0);
}

mysqlParser::Use_stmtContext* mysqlParser::Sql_stmtContext::use_stmt() {
  return getRuleContext<mysqlParser::Use_stmtContext>(0);
}


size_t mysqlParser::Sql_stmtContext::getRuleIndex() const {
  return mysqlParser::RuleSql_stmt;
}


std::any mysqlParser::Sql_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitSql_stmt(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Sql_stmtContext* mysqlParser::sql_stmt() {
  Sql_stmtContext *_localctx = _tracker.createInstance<Sql_stmtContext>(_ctx, getState());
  enterRule(_localctx, 2, mysqlParser::RuleSql_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case mysqlParser::SELECT: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        select_stmt();
        break;
      }

      case mysqlParser::USE: {
        enterOuterAlt(_localctx, 2);
        setState(53);
        use_stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Use_stmtContext ------------------------------------------------------------------

mysqlParser::Use_stmtContext::Use_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mysqlParser::Use_stmtContext::USE() {
  return getToken(mysqlParser::USE, 0);
}

tree::TerminalNode* mysqlParser::Use_stmtContext::SECURE() {
  return getToken(mysqlParser::SECURE, 0);
}

tree::TerminalNode* mysqlParser::Use_stmtContext::INSECURE() {
  return getToken(mysqlParser::INSECURE, 0);
}


size_t mysqlParser::Use_stmtContext::getRuleIndex() const {
  return mysqlParser::RuleUse_stmt;
}


std::any mysqlParser::Use_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitUse_stmt(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Use_stmtContext* mysqlParser::use_stmt() {
  Use_stmtContext *_localctx = _tracker.createInstance<Use_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, mysqlParser::RuleUse_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(56);
      match(mysqlParser::USE);
      setState(57);
      match(mysqlParser::SECURE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      match(mysqlParser::USE);
      setState(59);
      match(mysqlParser::INSECURE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_stmtContext ------------------------------------------------------------------

mysqlParser::Select_stmtContext::Select_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mysqlParser::Select_stmtContext::SELECT() {
  return getToken(mysqlParser::SELECT, 0);
}

std::vector<mysqlParser::ResultContext *> mysqlParser::Select_stmtContext::result() {
  return getRuleContexts<mysqlParser::ResultContext>();
}

mysqlParser::ResultContext* mysqlParser::Select_stmtContext::result(size_t i) {
  return getRuleContext<mysqlParser::ResultContext>(i);
}

tree::TerminalNode* mysqlParser::Select_stmtContext::FROM() {
  return getToken(mysqlParser::FROM, 0);
}

mysqlParser::Table_nameContext* mysqlParser::Select_stmtContext::table_name() {
  return getRuleContext<mysqlParser::Table_nameContext>(0);
}

tree::TerminalNode* mysqlParser::Select_stmtContext::WHERE() {
  return getToken(mysqlParser::WHERE, 0);
}

mysqlParser::ExprContext* mysqlParser::Select_stmtContext::expr() {
  return getRuleContext<mysqlParser::ExprContext>(0);
}


size_t mysqlParser::Select_stmtContext::getRuleIndex() const {
  return mysqlParser::RuleSelect_stmt;
}


std::any mysqlParser::Select_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitSelect_stmt(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Select_stmtContext* mysqlParser::select_stmt() {
  Select_stmtContext *_localctx = _tracker.createInstance<Select_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, mysqlParser::RuleSelect_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(mysqlParser::SELECT);
    setState(63);
    result();
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mysqlParser::T__1) {
      setState(64);
      match(mysqlParser::T__1);
      setState(65);
      result();
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    match(mysqlParser::FROM);
    setState(72);
    table_name();
    setState(75);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == mysqlParser::WHERE) {
      setState(73);
      match(mysqlParser::WHERE);
      setState(74);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

mysqlParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mysqlParser::Primary_exprContext* mysqlParser::ExprContext::primary_expr() {
  return getRuleContext<mysqlParser::Primary_exprContext>(0);
}

mysqlParser::Unary_operatorContext* mysqlParser::ExprContext::unary_operator() {
  return getRuleContext<mysqlParser::Unary_operatorContext>(0);
}

std::vector<mysqlParser::ExprContext *> mysqlParser::ExprContext::expr() {
  return getRuleContexts<mysqlParser::ExprContext>();
}

mysqlParser::ExprContext* mysqlParser::ExprContext::expr(size_t i) {
  return getRuleContext<mysqlParser::ExprContext>(i);
}

mysqlParser::Column_nameContext* mysqlParser::ExprContext::column_name() {
  return getRuleContext<mysqlParser::Column_nameContext>(0);
}

tree::TerminalNode* mysqlParser::ExprContext::IN() {
  return getToken(mysqlParser::IN, 0);
}

std::vector<mysqlParser::Column_valueContext *> mysqlParser::ExprContext::column_value() {
  return getRuleContexts<mysqlParser::Column_valueContext>();
}

mysqlParser::Column_valueContext* mysqlParser::ExprContext::column_value(size_t i) {
  return getRuleContext<mysqlParser::Column_valueContext>(i);
}

tree::TerminalNode* mysqlParser::ExprContext::AND() {
  return getToken(mysqlParser::AND, 0);
}

tree::TerminalNode* mysqlParser::ExprContext::OR() {
  return getToken(mysqlParser::OR, 0);
}


size_t mysqlParser::ExprContext::getRuleIndex() const {
  return mysqlParser::RuleExpr;
}


std::any mysqlParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


mysqlParser::ExprContext* mysqlParser::expr() {
   return expr(0);
}

mysqlParser::ExprContext* mysqlParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  mysqlParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  mysqlParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, mysqlParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(78);
      primary_expr();
      break;
    }

    case 2: {
      setState(79);
      unary_operator();
      setState(80);
      expr(9);
      break;
    }

    case 3: {
      setState(82);
      column_name();
      setState(83);
      match(mysqlParser::IN);
      setState(84);
      match(mysqlParser::T__18);
      setState(85);
      column_value();
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == mysqlParser::T__1) {
        setState(86);
        match(mysqlParser::T__1);
        setState(87);
        column_value();
        setState(92);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(93);
      match(mysqlParser::T__19);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(120);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(118);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(97);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(98);
          antlrcpp::downCast<ExprContext *>(_localctx)->bop = _input->LT(1);
          _la = _input->LA(1);
          if (!(((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 56) != 0)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->bop = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(99);
          expr(9);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(100);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(101);
          antlrcpp::downCast<ExprContext *>(_localctx)->bop = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == mysqlParser::T__5

          || _la == mysqlParser::T__6)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->bop = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(102);
          expr(8);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(103);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(104);
          antlrcpp::downCast<ExprContext *>(_localctx)->bop = _input->LT(1);
          _la = _input->LA(1);
          if (!(((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 3840) != 0)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->bop = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(105);
          expr(7);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(106);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(107);
          antlrcpp::downCast<ExprContext *>(_localctx)->bop = _input->LT(1);
          _la = _input->LA(1);
          if (!(((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 61440) != 0)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->bop = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(108);
          expr(6);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(109);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(110);
          antlrcpp::downCast<ExprContext *>(_localctx)->bop = _input->LT(1);
          _la = _input->LA(1);
          if (!(((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 458752) != 0)) {
            antlrcpp::downCast<ExprContext *>(_localctx)->bop = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(111);
          expr(5);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(112);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(113);
          match(mysqlParser::AND);
          setState(114);
          expr(4);
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(115);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(116);
          match(mysqlParser::OR);
          setState(117);
          expr(3);
          break;
        }

        default:
          break;
        } 
      }
      setState(122);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Primary_exprContext ------------------------------------------------------------------

mysqlParser::Primary_exprContext::Primary_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mysqlParser::Literal_valueContext* mysqlParser::Primary_exprContext::literal_value() {
  return getRuleContext<mysqlParser::Literal_valueContext>(0);
}

mysqlParser::ExprContext* mysqlParser::Primary_exprContext::expr() {
  return getRuleContext<mysqlParser::ExprContext>(0);
}


size_t mysqlParser::Primary_exprContext::getRuleIndex() const {
  return mysqlParser::RulePrimary_expr;
}


std::any mysqlParser::Primary_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitPrimary_expr(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Primary_exprContext* mysqlParser::primary_expr() {
  Primary_exprContext *_localctx = _tracker.createInstance<Primary_exprContext>(_ctx, getState());
  enterRule(_localctx, 10, mysqlParser::RulePrimary_expr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case mysqlParser::IDENTIFIER:
      case mysqlParser::DECIMAL_LITERAL:
      case mysqlParser::STRING_LITERAL: {
        enterOuterAlt(_localctx, 1);
        setState(123);
        literal_value();
        break;
      }

      case mysqlParser::T__18: {
        enterOuterAlt(_localctx, 2);
        setState(124);
        match(mysqlParser::T__18);
        setState(125);
        expr(0);
        setState(126);
        match(mysqlParser::T__19);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Literal_valueContext ------------------------------------------------------------------

mysqlParser::Literal_valueContext::Literal_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mysqlParser::Literal_valueContext::DECIMAL_LITERAL() {
  return getToken(mysqlParser::DECIMAL_LITERAL, 0);
}

tree::TerminalNode* mysqlParser::Literal_valueContext::STRING_LITERAL() {
  return getToken(mysqlParser::STRING_LITERAL, 0);
}

tree::TerminalNode* mysqlParser::Literal_valueContext::IDENTIFIER() {
  return getToken(mysqlParser::IDENTIFIER, 0);
}


size_t mysqlParser::Literal_valueContext::getRuleIndex() const {
  return mysqlParser::RuleLiteral_value;
}


std::any mysqlParser::Literal_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitLiteral_value(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Literal_valueContext* mysqlParser::literal_value() {
  Literal_valueContext *_localctx = _tracker.createInstance<Literal_valueContext>(_ctx, getState());
  enterRule(_localctx, 12, mysqlParser::RuleLiteral_value);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1924145348608) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Aggregate_funcContext ------------------------------------------------------------------

mysqlParser::Aggregate_funcContext::Aggregate_funcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mysqlParser::Aggregate_funcContext::MIN() {
  return getToken(mysqlParser::MIN, 0);
}

tree::TerminalNode* mysqlParser::Aggregate_funcContext::MAX() {
  return getToken(mysqlParser::MAX, 0);
}

tree::TerminalNode* mysqlParser::Aggregate_funcContext::SUM() {
  return getToken(mysqlParser::SUM, 0);
}

tree::TerminalNode* mysqlParser::Aggregate_funcContext::AVG() {
  return getToken(mysqlParser::AVG, 0);
}

tree::TerminalNode* mysqlParser::Aggregate_funcContext::COUNT() {
  return getToken(mysqlParser::COUNT, 0);
}


size_t mysqlParser::Aggregate_funcContext::getRuleIndex() const {
  return mysqlParser::RuleAggregate_func;
}


std::any mysqlParser::Aggregate_funcContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitAggregate_func(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Aggregate_funcContext* mysqlParser::aggregate_func() {
  Aggregate_funcContext *_localctx = _tracker.createInstance<Aggregate_funcContext>(_ctx, getState());
  enterRule(_localctx, 14, mysqlParser::RuleAggregate_func);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 266287972352) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unary_operatorContext ------------------------------------------------------------------

mysqlParser::Unary_operatorContext::Unary_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mysqlParser::Unary_operatorContext::NOT() {
  return getToken(mysqlParser::NOT, 0);
}


size_t mysqlParser::Unary_operatorContext::getRuleIndex() const {
  return mysqlParser::RuleUnary_operator;
}


std::any mysqlParser::Unary_operatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mysqlVisitor*>(visitor))
    return parserVisitor->visitUnary_operator(this);
  else
    return visitor->visitChildren(this);
}

mysqlParser::Unary_operatorContext* mysqlParser::unary_operator() {
  Unary_operatorContext *_localctx = _tracker.createInstance<Unary_operatorContext>(_ctx, getState());
  enterRule(_localctx, 16, mysqlParser::RuleUnary_operator);
  size_t _la = 0;
